<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/bg_fruits"
    tools:context=".MenuActivity"
    >

    <TextView
        android:text="@string/main_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="35sp"
        android:textColor="#FFFFFF"
        android:gravity="center"

        />
    <TextView
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvlogin"
        android:textSize="16sp"
        android:layout_below="@+id/textView"
        android:layout_marginTop="20sp"
        android:textColor="#FFFFFF"
        android:gravity="right"


        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/find"
        android:layout_below="@+id/tvlogin"
        android:layout_marginTop="15sp"
        android:id="@+id/find"
        android:shadowRadius="15"
        android:background="@drawable/mybutton"
        android:textColor="@color/color_title"
        android:textSize="21dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/share"

        android:layout_below="@+id/find"
        android:layout_marginTop="15sp"
        android:id="@+id/share"
        android:shadowRadius="15"
        android:background="@drawable/mybutton"
        android:textColor="@color/color_title"
        android:textSize="21dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/options"
        android:layout_below="@+id/share"
        android:layout_marginTop="15sp"
        android:id="@+id/btnlogin"
        android:shadowRadius="15"
        android:background="@drawable/mybutton"
        android:textColor="@color/color_title"
        android:textSize="21dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/help"
        android:layout_below="@+id/btnlogin"
        android:layout_marginTop="15sp"
        android:id="@+id/help"
        android:shadowRadius="15"
        android:background="@drawable/mybutton"
        android:textColor="@color/color_title"
        android:textSize="21dp"
        />






</RelativeLayout>
