<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".FirsStepActivity"
    android:background="#ffd8d8d8"
    >


    <TextView
        android:text="@string/fsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvName"
        android:textSize="35sp"
        android:gravity="center"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvName"
        android:hint="@string/fsName"

        android:id="@+id/etName"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etName"
        android:hint="@string/fsComponent"
        android:layout_marginTop="10dp"

        android:id="@+id/etIngredient"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/etIngredient"
        android:background="@drawable/mybutton"
        android:textColor="#FFFFFF"
        android:text="@string/btnAdd"
        android:id="@+id/btnAdd"
        android:minWidth="100dp"


        />








   <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeList"
        android:layout_below="@id/btnAdd"
       android:layout_marginTop="20dp"
        >






    <Button
             android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/btnNextStep"
            android:id="@+id/btnNextStep"
            android:background="@drawable/mybutton"
            android:textColor="#FFFFFF"
            android:layout_alignParentBottom="true"

             />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/lvLista"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_corner_white"
            android:layout_above="@id/btnNextStep"
            android:minHeight="100dp"
            />



   </RelativeLayout>
-->









</RelativeLayout>











